# lushops-web

./: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 28338f606740_add_alarm_auto_flag.py  76ce901233aa_initial_schema.py
backend/app/: main.py  models.py  seed.py
backend/app/core/: config.py  database.py  exceptions.py  middleware.py  schema.py  security.py
backend/app/modules/alarms/: models.py  router.py  schemas.py  service.py
backend/app/modules/apps/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/containers/: models.py  router.py  schemas.py  service.py
backend/app/modules/engine/: router.py  service.py
backend/app/modules/metrics/: models.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  router.py  schemas.py  service.py
backend/app/modules/rules/: models.py  router.py  schemas.py  service.py
backend/app/modules/settings/: models.py  router.py  schemas.py  service.py
backend/app/modules/simulator/: service.py
src/: App.tsx  Gate.tsx  main.tsx  types.ts
src/api/: client.ts  endpoints.ts  map.ts  types.ts
src/components/: AppCard.tsx  AutoRemediation.tsx  ContainerTable.tsx  DependencyMap.tsx  LogViewer.tsx
src/data/: alarms.ts  apps.ts  logs.ts  services.ts
(+48 files in other folders)
