[project]
name = "sentinel-backend"
version = "0.1.0"
description = "Backend API for Sentinel — container monitoring & alarm panel"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
